[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aes_pkcs5"
version = "1.0.4"
description = "Implementation of AES with CBC/ECB mode and padding scheme PKCS5"
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [
    {name = "Laerte Pereira", email = "hi@laerte.dev"}
]
maintainers = [
    {name = "Laerte Pereira", email = "hi@laerte.dev"}
]
license = "BSD-2-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">= 3.10"
dependencies = [
    "cryptography >= 41.0.2"
]

[metadata]
url = "https://github.com/Laerte/aes_pkcs5"


[project.urls]
Documentation = "https://aes-pkcs5.readthedocs.io"
Source = "https://github.com/Laerte/aes_pkcs5"
Tracker = "https://github.com/Laerte/aes_pkcs5/issues"

[tool.hatch.build.targets.sdist]
include = [
  "aes_pkcs5*",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3"
]

[tool.hatch.scripts]
post-install = "pre-commit install"