[metadata]
name = aes_pkcs5
version = 1.0.2
description = Implementation of AES with CBC/ECB mode and padding scheme PKCS5
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Laerte Pereira
author_email = hi@laerte.dev
license = BSD License
url = https://github.com/Laerte/aes_pkcs5
project_urls =
    Documentation = https://aes-pkcs5.readthedocs.io
    Source = https://github.com/Laerte/aes_pkcs5
    Tracker = https://github.com/Laerte/aes_pkcs5/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    cryptography >= 38.0.1

[options.packages.find]
include = aes_pkcs5*
exclude = tests.*
